testdata/baselines/reference/submodule/conformance/importDeferTypeConflict2.errors.txt
b.ts(1,33): error TS2307: Cannot find module 'a' or its corresponding type declarations.


==== a.ts (0 errors) ====
    export function foo() {
      console.log("foo from a");
    }
    
==== b.ts (1 errors) ====
    import defer type * as ns1 from "a";
                                    ~~~
!!! error TS2307: Cannot find module 'a' or its corresponding type declarations.
    